--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
 
   </div>
-  <audio controls autoplay>
+  <audio autoplay>
     <source src="/music/Maan Meri Jaan(PagalWorld.com.se).mp3" type="audio/mpeg">
 </audio>
   <script>
